<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Catalogue Movie</string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="action_settings">Settings</string>
    <string name="text_detail_releasedate">release</string>
    <string name="content_description_poster_detail">description</string>
    <string name="content_description_icon_rate">icon_reate</string>
    <string name="text_detail_description">description</string>
    <string name="btnSaveFavorite">save</string>
    <string name="tvTrailer">trailer</string>
    <string name="tvReview">review</string>
    <string name="tvdetailnoReviewView">noreview</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_search">Finding Movies</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="label_tab_nowplaying">Now Playing</string>
    <string name="label_tab_upcoming">Upcoming</string>
    <string name="nav_header_name">Mursit Affandi</string>
    <string name="nav_header_link">mursitaffandi@gmail.com</string>
    <string name="label_drawer_nowplaying">Now Playing</string>
    <string name="label_drawer_upcoming">Upcoming</string>
    <string name="label_menu_search">Search</string>
    <string name="label_button_item_detail">Detail</string>
    <string name="label_button_item_share">Share</string>
    <string name="label_action_share">Share Movie</string>
    <string name="setting_change_language">Change Language</string>
    <string name="label_tab_favorite">Favorite</string>
    <string name="label_drawer_favorite">Favorite</string>
    <string name="switch_fav">Favorite</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="empty_text">null</string>
    <string name="title_activity_settings">Settings</string>
    <string name="pref_title_vibrate">Vibrate</string>
    <string name="action_share">Share</string>
    <string name="label_release_date">Release</string>
    <string name="label_vote">Vote</string>
    <string name="label_genres">Genre</string>
    <string name="label_overview">Overview</string>
    <string name="label_production_details">Production</string>
    <string name="label_belongs">Belongs</string>
    <string name="label_budget">Budget</string>
    <string name="label_revenue">Revenue</string>
    <string name="label_companies">Companies</string>
    <string name="label_countries">Countries</string>
    <string name="option_settings">Settings</string>
    <string name="action_notification">Notification</string>
    <string name="action_language">Language</string>
    <string name="key_notif_daily">key_switch_notif_daily</string>
    <string name="key_notif_nowplaying">key_switch_notif_nowplaying</string>
    <string name="key_setting_language">key_language</string>
    <string name="label_notif_daily_title">Daily Reminder</string>
    <string name="label_notif_nowplaying_title">Now Playing Coming Reminder</string>
    <string name="label_setting_language_title">Go To Setting Language</string>
    <string name="label_notif_daily_summary">Switch Daily Notification</string>
    <string name="label_notif_nowplaying_summary">Switch Now Playing Notification</string>
    <string name="label_setting_language_summary">Change System Language</string>
    <string name="text_body_notif_daily_reminder">Catalogue Movie is missing you</string>
    <string name="message_set_daily_reminder_on">Daily Reminder On</string>
    <string name="message_set_daily_reminder_off">Daily Reminder Off</string>
    <string name="message_upcoming_release">Today %s release</string>
    <string name="message_toast_set_daily_reminder_on">Daily Reminder On at</string>
    <string name="message_toast_set_daily_reminder_off">Daily reminder off</string>
    <string name="message_toast_set_scheduler_on">Scheduler On</string>
    <string name="message_toast_set_scheduler_off">Scheduler off</string>
    <string name="message_toast_detailmovie_unsuccess_load">Movie can\'t save because no internet</string>
</resources>
