<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/action_notification">

        <SwitchPreference
            android:defaultValue="false"
            android:key="@string/key_notif_daily"
            android:summary="@string/label_notif_daily_summary"
            android:title="@string/label_notif_daily_title" />

        <SwitchPreference
            android:defaultValue="false"
            android:key="@string/key_notif_nowplaying"
            android:summary="@string/label_notif_nowplaying_summary"
            android:title="@string/label_notif_nowplaying_title" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/action_language">

        <Preference
            android:key="@string/key_setting_language"
            android:summary="@string/label_setting_language_summary"
            android:title="@string/label_setting_language_title" />

    </PreferenceCategory>

</PreferenceScreen>